add: twig, router

--- a/src/View/404.twig
+++ b/src/View/404.twig
@@ -3,7 +3,7 @@
 {% block title %}Home{% endblock %}
 
 {% block nav %}
-{% include '/snippets/nav/nav.twig'%}
+{% include '/snippets/nav.twig'%}
 {% endblock %} 
 
 {% block content %}
@@ -14,5 +14,5 @@
 {% endblock %}
 
 {% block footer %}
-{% include '/snippets/footer/footer.twig' %}
+{% include '/snippets/footer.twig' %}
 {% endblock %}
