--- a/src/View/home.twig
+++ b/src/View/home.twig
@@ -3,25 +3,16 @@
 {% block title %}Home{% endblock %}
 
 {% block nav %}
-{% include '/snippets/nav/nav.twig'%}
+{% include '/snippets/nav.twig'%}
 {% endblock %} 
 
 {% block content %}
 
-<h1>Register</h1>
-<form action="" method="POST">
-    <label for="name">Name</label>
-    <input type="text" name="name">
-    <label for="mail">Email</label>
-    <input type="email" name="mail">
-    <label for="password">Password</label>
-    <input type="password" name="password">
-    <input type="submit" value="Submit">
-</form>
-
+<h1>Home</h1>
+<p>Welcome to the home page</p>
 
 {% endblock %}
 
 {% block footer %}
-{% include '/snippets/footer/footer.twig' %}
+{% include '/snippets/footer.twig' %}
 {% endblock %}
